fixed header sizing on mobile

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -107,4 +107,11 @@ footer {
     footer {
         font-size: 0.5rem;
     }
+    .icon {
+        width: 25%;
+        margin-left: 0;
+    }
+    .banner {
+        width: 75%;
+    }
 }
